# tsutaerufriendly

./: .flake8  .gitignore  .slugignore  LICENSE  Procfile  README.md  main.py  manage.py  pyproject.toml  requirements.txt  setup.cfg
api/: endpoints.py  model.py
misc/dokku/: uwsgi.ini
static/: request_translate.js  styles.css
templates/: index.html
tsutaerufriendly/: asgi.py  settings.py
