[tool.poetry]
name = "jainu"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = ">=3.8"
django = ">=2.2"
django-extensions = "*"
django-redis = "*"
psycopg2-binary = "*"
pytest = "*"
pytest-cov = "*"
python-dotenv = "*"
sentry-sdk = "*"
shortuuid = "*"
unittest-xml-reporting = "*"
uwsgi = "*"
werkzeug = "*"
whitenoise = "*"
gunicorn = "^20.1.0"
torch = "^2.0.0"
fastapi = "0.73.0"
uvicorn = "0.15.0"
transformers = "^4.28.1"
sentencepiece = "^0.1.99"
jinja2 = "^3.1.2"
click = "^8.1.3"
h11 = "^0.14.0"
websockets = "^11.0.2"
asgiref = "^3.6.0"
httptools = "^0.5.0"
uvloop = "^0.17.0"
pyyaml = "^6.0"
watchgod = "^0.8.2"
setuptools = "^67.7.2"

[tool.poetry.dev-dependencies]
ipython = "*"
bpython = "*"
pudb = "*"
django-stubs = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
